# File-sort

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: builder.yml
packaging/windows/: build_portable_windows.cmd
res/: readme.txt
res/linux/: FileSort.desktop.in
src/: CMakeLists.txt  global.h
src/gui/: CMakeLists.txt  guimainwindow.cpp  guimainwindow.h  main_gui.cpp
